# univ-projects

./: README.md
Arpeggio-BD-master/1ºTrabalhoBD/: 201718BD-RelatorioGrupo19.docx  (+1 more)
Cripto-master/: README.md
FUSElada-master/: Makefile  README.md  myfile.txt  passthrough.c  ssmtp.conf  teste
HourOfCode-master/: README.md  pipe.js
LI3-with-Yoda1617-master/: README.md
Match-Made-In-Heaven-master/: .gitignore
Nimbus24-master/: .gitignore  Nimbus24.sln  cidades.sql  script.sql
PI101-master/: README.md
PLometro-master/: README.md
POO-master/: README.md
POO1617-UMeR-master/: README.md
SO-guioes-master/: README.md
SRCR-Fichas-master/: ficha3.pl  ficha4.pl  ficha6.pl
SSI-master/: README.md  SSI.ipynb  ca-private.key  ca-public.key  ca.crt  client-private.key  client-public.key  client.crt
ServerCrash-CC-master/: README.md
Spaaace-CG-master/CG_Fase3/Files/: CMakeLists.txt  README.md  cola.xml  example.xml  plane.xml  pot2.3d  ring.3d  solsyst.xml  sphereSun.3d  teacup.3d  tinyxml2.cpp  torus.3d
Spaaace-CG-master/CG_Fase3/Files/Engine/: action.cpp  action.h  engine.cpp  group.h  parser.cpp  parser.h  shape.cpp  shape.h
Spaaace-CG-master/CG_Fase3/Files/Generator/: cone.cpp  generator.cpp  torus.cpp  vertex.cpp
Spaaace-CG-master/CG_Fase4/: CMakeLists.txt  plane.3d  plane.xml  sis.xml  solarsystlight.xml  sphere.3d  torus.3d
Spaaace-CG-master/CG_Fase4/Engine/: action.cpp  action.h  engine.cpp  group.cpp  group.h  light.cpp  light.h  material.cpp  material.h  parser.cpp  parser.h  shape.cpp  shape.h
Spaaace-CG-master/CG_Fase4/Generator/: box.cpp  box.h  cone.cpp  cone.h  generator  generator.cpp  plane.cpp  plane.h  point.cpp  point.h  sphere.cpp  sphere.h  torus.cpp  torus.h
Spaaace-CG-master/CG_Fase4/oldFiles/: cube.xml  dunno.patch  exem.xml  teaparty.xml  teapot.3d  teaspoon.3d  torus.xml  yolo.3d
TrafficSim-master/: .gitignore  README.md
(+992 files in other folders)
